--- a/vignettes/LinkGenius_v0_2_0.ipynb
+++ b/vignettes/LinkGenius_v0_2_0.ipynb
@@ -20,7 +20,7 @@
       "source": [
         "# Google Colaboratory Link Genius Notebook\n",
         "\n",
-        "<a href=\"http://colab.research.google.com/github/ISSACCorp-COS/LinkGenius/vignettes/blob/master/LinkGenius_v0_2_0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "<a href=\"http://colab.research.google.com/github/ISSACCorp-COS/LinkGenius/blob/master/vignettes/LinkGenius_v0_2_0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "\n",
         "This notebook runs the [Link Genius Tool](https://github.com/ISSACCorp-COS/LinkGenius). See the link for more details about using the shiny application in other ways.\n",
         "\n",
@@ -34,12 +34,10 @@
       "cell_type": "code",
       "execution_count": 1,
       "source": [
-        "!git clone https://github.com/ISSACCorp-COS/LinkGenius.git\n",
-        "\n",
-        "#zipName = \"\\\\YOUR PATH\\\\LinkGenius.zip\"\n",
-        "#download.file(url = \"https://github.com/ISSACCorp-COS/LinkGenius/archive/refs/heads/master.zip\", destFile = zipName, method = \"auto\", quiet = FALSE)\n",
-        "#unzipFolder = \"\\\\YOUR PATH\\\\\"\n",
-        "#unzip(zipfile = zipName, exdir = unzipFolder)\n",
+        "zipName = \"\\\\YOUR PATH\\\\LinkGenius.zip\"\n",
+        "download.file(url = \"https://github.com/ISSACCorp-COS/LinkGenius/archive/refs/heads/master.zip\", destFile = zipName, method = \"auto\", quiet = FALSE)\n",
+        "unzipFolder = \"\\\\YOUR PATH\\\\\"\n",
+        "unzip(zipfile = zipName, exdir = unzipFolder)\n",
         "\n",
         "if( !require(fastLink) ) install.packages(\"fastLink\")\n",
         "library(fastLink)\n",
