zipUrl is a string

--- a/vignettes/LinkGenius_v0_2_0.ipynb
+++ b/vignettes/LinkGenius_v0_2_0.ipynb
@@ -34,9 +34,10 @@
       "cell_type": "code",
       "execution_count": 1,
       "source": [
-        "zipName = \"\\\\YOUR PATH\\\\LinkGenius.zip\"\n",
-        "download.file(url = \"https://github.com/ISSACCorp-COS/LinkGenius/archive/refs/heads/master.zip\", destFile = zipName, method = \"auto\", quiet = FALSE)\n",
-        "unzipFolder = \"\\\\YOUR PATH\\\\\"\n",
+        "zipName <- \"\\\\YOUR PATH\\\\LinkGenius.zip\"\n",
+        "zipUrl <- \"https://github.com/ISSACCorp-COS/LinkGenius/archive/refs/heads/master.zip\"\n",
+        "download.file(url = zipUrl, destFile = zipName, method = \"auto\", quiet = FALSE)\n",
+        "unzipFolder <- \"\\\\YOUR PATH\\\\\"\n",
         "unzip(zipfile = zipName, exdir = unzipFolder)\n",
         "\n",
         "if( !require(fastLink) ) install.packages(\"fastLink\")\n",
