destFile to destfile

--- a/vignettes/LinkGenius_v0_2_0.ipynb
+++ b/vignettes/LinkGenius_v0_2_0.ipynb
@@ -36,7 +36,7 @@
       "source": [
         "zipName <- \"\\\\YOUR PATH\\\\LinkGenius.zip\"\n",
         "zipUrl <- \"https://github.com/ISSACCorp-COS/LinkGenius/archive/refs/heads/master.zip\"\n",
-        "download.file(url = zipUrl, destFile = zipName, method = \"auto\", quiet = FALSE)\n",
+        "download.file(url = zipUrl, destfile = zipName, method = \"auto\", quiet = FALSE, mode = \"wb\")\n",
         "unzipFolder <- \"\\\\YOUR PATH\\\\\"\n",
         "unzip(zipfile = zipName, exdir = unzipFolder)\n",
         "\n",
