Use directory LinkGenius-master

--- a/vignettes/LinkGenius_v0_2_0.ipynb
+++ b/vignettes/LinkGenius_v0_2_0.ipynb
@@ -1,6 +1,6 @@
 {
   "nbformat": 4,
-  "nbformat_minor": 2,
+  "nbformat_minor": 0,
   "metadata": {
     "colab": {
       "name": "LinkGenius_v0.2.0.ipynb",
@@ -17,6 +17,9 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-J0UGymUDFf9"
+      },
       "source": [
         "# Google Colaboratory Link Genius Notebook\n",
         "\n",
@@ -25,20 +28,24 @@
         "This notebook runs the [Link Genius Tool](https://github.com/ISSACCorp-COS/LinkGenius). See the link for more details about using the shiny application in other ways.\n",
         "\n",
         "The following cell will load the libraries and code for you.  This can take ten minutes or so.  However, it will complete eventually.  After the first time, it will be faster until the end of your colab session."
-      ],
-      "metadata": {
-        "id": "-J0UGymUDFf9"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "metadata": {
+        "id": "hXJ-3vD43jX4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ee59b0f4-9fb0-4668-a0e2-6c37f00c0242"
+      },
       "source": [
-        "zipName <- \"\\\\YOUR PATH\\\\LinkGenius.zip\"\n",
+        "zipName <- \"LinkGenius.zip\"\n",
         "zipUrl <- \"https://github.com/ISSACCorp-COS/LinkGenius/archive/refs/heads/master.zip\"\n",
         "download.file(url = zipUrl, destfile = zipName, method = \"auto\", quiet = FALSE, mode = \"wb\")\n",
-        "unzipFolder <- \"\\\\YOUR PATH\\\\\"\n",
+        "unzipFolder <- \"/\"\n",
         "unzip(zipfile = zipName, exdir = unzipFolder)\n",
+        "setws(\"/LinkGenius-master/\")\n",
         "\n",
         "if( !require(fastLink) ) install.packages(\"fastLink\")\n",
         "library(fastLink)\n",
@@ -108,319 +115,37 @@
         "\n",
         "#shinyApp(ui = ui, server = server)\n"
       ],
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
           "text": [
             "Loading required package: fastLink\n",
             "\n",
-            "Loading required package: reticulate\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "$manager_state\n",
-              "$manager_state$version_major\n",
-              "[1] 2\n",
-              "\n",
-              "$manager_state$version_minor\n",
-              "[1] 0\n",
-              "\n",
-              "$manager_state$state\n",
-              "$manager_state$state$`522b31a759ad4bd08bff355d1d6857fe`\n",
-              "$manager_state$state$`522b31a759ad4bd08bff355d1d6857fe`$model_name\n",
-              "[1] \"LayoutModel\"\n",
-              "\n",
-              "$manager_state$state$`522b31a759ad4bd08bff355d1d6857fe`$model_module\n",
-              "[1] \"@jupyter-widgets/base\"\n",
-              "\n",
-              "$manager_state$state$`522b31a759ad4bd08bff355d1d6857fe`$model_module_version\n",
-              "[1] \"1.2.0\"\n",
-              "\n",
-              "$manager_state$state$`522b31a759ad4bd08bff355d1d6857fe`$state\n",
-              "named list()\n",
-              "\n",
-              "\n",
-              "$manager_state$state$`4151792a01a6473f8c4d8e7d8523c051`\n",
-              "$manager_state$state$`4151792a01a6473f8c4d8e7d8523c051`$model_name\n",
-              "[1] \"SliderStyleModel\"\n",
-              "\n",
-              "$manager_state$state$`4151792a01a6473f8c4d8e7d8523c051`$model_module\n",
-              "[1] \"@jupyter-widgets/controls\"\n",
-              "\n",
-              "$manager_state$state$`4151792a01a6473f8c4d8e7d8523c051`$model_module_version\n",
-              "[1] \"1.5.0\"\n",
-              "\n",
-              "$manager_state$state$`4151792a01a6473f8c4d8e7d8523c051`$state\n",
-              "named list()\n",
-              "\n",
-              "\n",
-              "$manager_state$state$`8805c7c7330544018f600eecab4b6a53`\n",
-              "$manager_state$state$`8805c7c7330544018f600eecab4b6a53`$model_name\n",
-              "[1] \"IntSliderModel\"\n",
-              "\n",
-              "$manager_state$state$`8805c7c7330544018f600eecab4b6a53`$model_module\n",
-              "[1] \"@jupyter-widgets/controls\"\n",
-              "\n",
-              "$manager_state$state$`8805c7c7330544018f600eecab4b6a53`$model_module_version\n",
-              "[1] \"1.5.0\"\n",
-              "\n",
-              "$manager_state$state$`8805c7c7330544018f600eecab4b6a53`$state\n",
-              "$manager_state$state$`8805c7c7330544018f600eecab4b6a53`$state$`_dom_classes`\n",
-              "list()\n",
-              "\n",
-              "$manager_state$state$`8805c7c7330544018f600eecab4b6a53`$state$layout\n",
-              "[1] \"IPY_MODEL_522b31a759ad4bd08bff355d1d6857fe\"\n",
-              "\n",
-              "$manager_state$state$`8805c7c7330544018f600eecab4b6a53`$state$style\n",
-              "[1] \"IPY_MODEL_4151792a01a6473f8c4d8e7d8523c051\"\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "$view_specs\n",
-              "$view_specs[[1]]\n",
-              "$view_specs[[1]]$version_major\n",
-              "[1] 2\n",
-              "\n",
-              "$view_specs[[1]]$version_minor\n",
-              "[1] 0\n",
-              "\n",
-              "$view_specs[[1]]$model_id\n",
-              "[1] \"8805c7c7330544018f600eecab4b6a53\"\n",
-              "\n",
-              "\n"
-            ],
-            "text/markdown": [
-              "$manager_state\n",
-              ":   $version_major\n",
-              ":   2\n",
-              "$version_minor\n",
-              ":   0\n",
-              "$state\n",
-              ":   $`522b31a759ad4bd08bff355d1d6857fe`\n",
-              ":   $model_name\n",
-              ":   'LayoutModel'\n",
-              "$model_module\n",
-              ":   '@jupyter-widgets/base'\n",
-              "$model_module_version\n",
-              ":   '1.2.0'\n",
-              "$state\n",
-              ":   \n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "$`4151792a01a6473f8c4d8e7d8523c051`\n",
-              ":   $model_name\n",
-              ":   'SliderStyleModel'\n",
-              "$model_module\n",
-              ":   '@jupyter-widgets/controls'\n",
-              "$model_module_version\n",
-              ":   '1.5.0'\n",
-              "$state\n",
-              ":   \n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "$`8805c7c7330544018f600eecab4b6a53`\n",
-              ":   $model_name\n",
-              ":   'IntSliderModel'\n",
-              "$model_module\n",
-              ":   '@jupyter-widgets/controls'\n",
-              "$model_module_version\n",
-              ":   '1.5.0'\n",
-              "$state\n",
-              ":   $`_dom_classes`\n",
-              ":   \n",
-              "\n",
-              "\n",
-              "$layout\n",
-              ":   'IPY_MODEL_522b31a759ad4bd08bff355d1d6857fe'\n",
-              "$style\n",
-              ":   'IPY_MODEL_4151792a01a6473f8c4d8e7d8523c051'\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "$view_specs\n",
-              ":   1. $version_major\n",
-              ":   2\n",
-              "$version_minor\n",
-              ":   0\n",
-              "$model_id\n",
-              ":   '8805c7c7330544018f600eecab4b6a53'\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n",
-              "\n"
-            ],
-            "text/latex": [
-              "\\begin{description}\n",
-              "\\item[\\$manager\\_state] \\begin{description}\n",
-              "\\item[\\$version\\_major] 2\n",
-              "\\item[\\$version\\_minor] 0\n",
-              "\\item[\\$state] \\begin{description}\n",
-              "\\item[\\$`522b31a759ad4bd08bff355d1d6857fe`] \\begin{description}\n",
-              "\\item[\\$model\\_name] 'LayoutModel'\n",
-              "\\item[\\$model\\_module] '@jupyter-widgets/base'\n",
-              "\\item[\\$model\\_module\\_version] '1.2.0'\n",
-              "\\item[\\$state] \\begin{description}\n",
-              "\\end{description}\n",
-              "\n",
-              "\\end{description}\n",
-              "\n",
-              "\\item[\\$`4151792a01a6473f8c4d8e7d8523c051`] \\begin{description}\n",
-              "\\item[\\$model\\_name] 'SliderStyleModel'\n",
-              "\\item[\\$model\\_module] '@jupyter-widgets/controls'\n",
-              "\\item[\\$model\\_module\\_version] '1.5.0'\n",
-              "\\item[\\$state] \\begin{description}\n",
-              "\\end{description}\n",
-              "\n",
-              "\\end{description}\n",
-              "\n",
-              "\\item[\\$`8805c7c7330544018f600eecab4b6a53`] \\begin{description}\n",
-              "\\item[\\$model\\_name] 'IntSliderModel'\n",
-              "\\item[\\$model\\_module] '@jupyter-widgets/controls'\n",
-              "\\item[\\$model\\_module\\_version] '1.5.0'\n",
-              "\\item[\\$state] \\begin{description}\n",
-              "\\item[\\$`\\_dom\\_classes`] \\begin{enumerate}\n",
-              "\\end{enumerate}\n",
-              "\n",
-              "\\item[\\$layout] 'IPY\\_MODEL\\_522b31a759ad4bd08bff355d1d6857fe'\n",
-              "\\item[\\$style] 'IPY\\_MODEL\\_4151792a01a6473f8c4d8e7d8523c051'\n",
-              "\\end{description}\n",
-              "\n",
-              "\\end{description}\n",
-              "\n",
-              "\\end{description}\n",
-              "\n",
-              "\\end{description}\n",
-              "\n",
-              "\\item[\\$view\\_specs] \\begin{enumerate}\n",
-              "\\item \\begin{description}\n",
-              "\\item[\\$version\\_major] 2\n",
-              "\\item[\\$version\\_minor] 0\n",
-              "\\item[\\$model\\_id] '8805c7c7330544018f600eecab4b6a53'\n",
-              "\\end{description}\n",
-              "\n",
-              "\\end{enumerate}\n",
-              "\n",
-              "\\end{description}\n"
-            ],
-            "text/html": [
-              "<dl>\n",
-              "\t<dt>$manager_state</dt>\n",
-              "\t\t<dd><dl>\n",
-              "\t<dt>$version_major</dt>\n",
-              "\t\t<dd>2</dd>\n",
-              "\t<dt>$version_minor</dt>\n",
-              "\t\t<dd>0</dd>\n",
-              "\t<dt>$state</dt>\n",
-              "\t\t<dd><dl>\n",
-              "\t<dt>$`522b31a759ad4bd08bff355d1d6857fe`</dt>\n",
-              "\t\t<dd><dl>\n",
-              "\t<dt>$model_name</dt>\n",
-              "\t\t<dd>'LayoutModel'</dd>\n",
-              "\t<dt>$model_module</dt>\n",
-              "\t\t<dd>'@jupyter-widgets/base'</dd>\n",
-              "\t<dt>$model_module_version</dt>\n",
-              "\t\t<dd>'1.2.0'</dd>\n",
-              "\t<dt>$state</dt>\n",
-              "\t\t<dd><dl>\n",
-              "</dl>\n",
-              "</dd>\n",
-              "</dl>\n",
-              "</dd>\n",
-              "\t<dt>$`4151792a01a6473f8c4d8e7d8523c051`</dt>\n",
-              "\t\t<dd><dl>\n",
-              "\t<dt>$model_name</dt>\n",
-              "\t\t<dd>'SliderStyleModel'</dd>\n",
-              "\t<dt>$model_module</dt>\n",
-              "\t\t<dd>'@jupyter-widgets/controls'</dd>\n",
-              "\t<dt>$model_module_version</dt>\n",
-              "\t\t<dd>'1.5.0'</dd>\n",
-              "\t<dt>$state</dt>\n",
-              "\t\t<dd><dl>\n",
-              "</dl>\n",
-              "</dd>\n",
-              "</dl>\n",
-              "</dd>\n",
-              "\t<dt>$`8805c7c7330544018f600eecab4b6a53`</dt>\n",
-              "\t\t<dd><dl>\n",
-              "\t<dt>$model_name</dt>\n",
-              "\t\t<dd>'IntSliderModel'</dd>\n",
-              "\t<dt>$model_module</dt>\n",
-              "\t\t<dd>'@jupyter-widgets/controls'</dd>\n",
-              "\t<dt>$model_module_version</dt>\n",
-              "\t\t<dd>'1.5.0'</dd>\n",
-              "\t<dt>$state</dt>\n",
-              "\t\t<dd><dl>\n",
-              "\t<dt>$`_dom_classes`</dt>\n",
-              "\t\t<dd><ol>\n",
-              "</ol>\n",
-              "</dd>\n",
-              "\t<dt>$layout</dt>\n",
-              "\t\t<dd>'IPY_MODEL_522b31a759ad4bd08bff355d1d6857fe'</dd>\n",
-              "\t<dt>$style</dt>\n",
-              "\t\t<dd>'IPY_MODEL_4151792a01a6473f8c4d8e7d8523c051'</dd>\n",
-              "</dl>\n",
-              "</dd>\n",
-              "</dl>\n",
-              "</dd>\n",
-              "</dl>\n",
-              "</dd>\n",
-              "</dl>\n",
-              "</dd>\n",
-              "\t<dt>$view_specs</dt>\n",
-              "\t\t<dd><ol>\n",
-              "\t<li><dl>\n",
-              "\t<dt>$version_major</dt>\n",
-              "\t\t<dd>2</dd>\n",
-              "\t<dt>$version_minor</dt>\n",
-              "\t\t<dd>0</dd>\n",
-              "\t<dt>$model_id</dt>\n",
-              "\t\t<dd>'8805c7c7330544018f600eecab4b6a53'</dd>\n",
-              "</dl>\n",
-              "</li>\n",
-              "</ol>\n",
-              "</dd>\n",
-              "</dl>\n"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘fastLink’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependencies ‘pixmap’, ‘sp’, ‘iterators’, ‘ade4’, ‘ggrepel’, ‘xtable’, ‘scatterplot3d’, ‘lpSolve’, ‘foreach’, ‘doParallel’, ‘gtools’, ‘stringdist’, ‘FactoClass’, ‘adagio’, ‘plotrix’, ‘RcppArmadillo’, ‘RcppEigen’\n",
+            "\n",
+            "\n",
+            "Loading required package: shiny\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘shiny’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependencies ‘sass’, ‘jquerylib’, ‘httpuv’, ‘sourcetools’, ‘later’, ‘promises’, ‘bslib’\n",
+            "\n",
+            "\n",
+            "Warning message in install.packages(\"shiny\"):\n",
+            "“installation of package ‘sass’ had non-zero exit status”\n"
+          ],
+          "name": "stderr"
         }
-      ],
-      "metadata": {
-        "id": "hXJ-3vD43jX4",
-        "outputId": "9866ae47-7744-4e07-d523-6372e43d1ccd",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 997
-        }
-      }
+      ]
     }
   ]
 }
